--- a/styles/Bird.module.css
+++ b/styles/Bird.module.css
@@ -46,11 +46,11 @@
 
 .wings {
     position: absolute;
-    top: 70%;
+    top: 50%;
     left: -10%;
     height: 10px;
     width: 40px;
-    background-color: darkorange;
+    background-color: orange;
     border-radius: 5px;
     transform: rotate(-80deg);
 }
@@ -62,7 +62,7 @@
     height: 10px;
     width: 33px;
     left: 7px;
-    background-color: darkorange;
+    background-color: orange;
     border-radius: 5px;
 }
 
@@ -73,6 +73,6 @@
     height: 10px;
     left: 15px;
     width: 25px;
-    background-color: darkorange;
+    background-color: orange;
     border-radius: 5px;
 }
